Fixed navbar not working properly on small screen sizes. Removed navbar when the user is not logged in.

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,4 +1,4 @@
-.navbar-custom { background-color: #A530C5; height:65px} /* Use this to change background */
+.navbar-custom { background-color: #A530C5;} /* Use this to change background */
 .navbar-custom .navbar-nav>.active>a:hover,.navbar-custom .navbar-nav>li>a:hover, .navbar-custom .navbar-nav>li>a:focus { background-color:#5D088A}
 .navbar-custom .navbar-nav>.active>a,.navbar-custom .navbar-nav>.open>a,.navbar-custom .navbar-nav>.open>a, .navbar-custom .navbar-nav>.open>a:hover,.navbar-custom .navbar-nav>.open>a, .navbar-custom .navbar-nav>.open>a:hover, .navbar-custom .navbar-nav>.open>a:focus { background-color: #080808}
 .dropdown-menu { background-color: #ffffff}
